# codeseek

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_ZH.md  build.rs  build.sh  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
Formula/: codeseek.rb
brew/: codeseek.rb
docs/: ARCHITECTURE.md  SETUP_GUIDE.md  codeseek-cli-rewrite-plan.md  js-detector.md  sandbox-设计思路.md
rust-core/: Cargo.toml
rust-core/src/: config.rs  lib.rs  main.rs  watcher.rs
rust-core/src/cli/: args.rs  runner.rs
rust-core/src/codegraph/: parser.rs  repository.rs
rust-core/src/codegraph/treesitter/: parsers.rs
rust-core/src/detector/: mod.rs
rust-core/src/mcp/: mod.rs  server.rs  tools.rs
rust-core/src/services/: callgraph_service.rs  embedding_service.rs
rust-core/src/storage/: incremental.rs  persistence.rs
rust-core/src/ui/: progress.rs
rust-core/tests/: test_functional.rs  test_python_parser_debug.rs
rust-core/tests/parsers/: go.rs  mod.rs
rust-core/tests/test_repos/simple_js_project/: main.9d1c33d4.js
scripts/: bump-version.sh
src/: config.rs  lib.rs  main.rs
src/cli/: analyze.rs  args.rs  mod.rs  runner.rs  vectorize.rs
src/codegraph/: chunker.rs  graph.rs  mod.rs  parser.rs  repository.rs  types.rs
src/http/: mod.rs  server.rs
src/services/: analyzer.rs  commit_embedding_service.rs  embedding_service.rs  hybrid_search.rs  mod.rs  repo_knowledge_service.rs  (+2 more)
tests/: core-ouptputs.json  test_functional.rs  test_semantic_search.py
(+74 files in other folders)
