[package]
name = "codeseek"
version = "0.1.24"
edition = "2021"

[dependencies]
# Core dependencies for codegraph
petgraph = { version = "0.6", features = ["serde-1"] }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
chrono = { version = "=0.4.38", features = ["serde"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# File processing dependencies
md5 = "0.7"
fs2 = "0.4"

# AST parsing dependencies (copied from original project)
tree-sitter = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Additional dependencies for treesitter functionality
ropey = "1.6"
regex = "1.9"
glob = "0.3"
walkdir = "2.4"
async-trait = "0.1"
dyn_partial_eq = "0.1"
parking_lot = "0.12"
itertools = "0.14"
similar = "2.3"
typetag = "0.2"


lancedb = "=0.4.15"
arrow = "50"
reqwest = { version = "0.13.1", features = ["json"] }
futures = "0.3.31"
toml = "0.8"
dirs = "5.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
anyhow = "1"

lance = "=0.10.6"

# BM25 full-text search
tantivy = "0.22"

[dev-dependencies]
tempfile = "3.8"
